--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
 
 
     <script src="modules/auth/js/directives/RegisterFormDirectives.js"></script>
+    <script src="js/directives/friendFinder.js"></script>
 
 
   </head>
