--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/loginFormStyle.css" rel="stylesheet">
-    <link href="css/homeStyles.css" rel="stylesheet">
+    <link href="css/homeStyle.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
