--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/app.js"></script>
     <script src="modules/auth/js/controllers/LoginController.js"></script>
     <script src="modules/auth/js/controllers/RegisterController.js"></script>
+    <script src="js/controllers/FriendController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
 
 
