--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/loginFormStyle.css" rel="stylesheet">
     <link href="css/homeStyle.css" rel="stylesheet">
+    <link href="css/chatStyle.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
