--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/loginFormStyle.css" rel="stylesheet">
-    <link href="css/homeStyle.css" rel="stylesheet">
+    <link href="modules/auth/css/loginFormStyle.css" rel="stylesheet">
+    <link href="modules/friendList/css/friendStyle.css" rel="stylesheet">
     <link href="css/chatStyle.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -21,6 +21,12 @@
     <script src="lib/angular-messages/angular-messages.min.js"></script>
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
+    <!-- angular-socket-io -->
+    <script src="lib/angular-socket-io/socket.js"></script>
+    <script src="lib/angular-socket-io/mock/socket-io.js"></script>
+
+
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -28,18 +34,21 @@
     <script src="js/app.js"></script>
     <script src="modules/auth/js/controllers/LoginController.js"></script>
     <script src="modules/auth/js/controllers/RegisterController.js"></script>
-    <script src="js/controllers/FriendController.js"></script>
+    <script src="modules/friendList/js/controllers/FriendController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
+    <script src="js/controllers/ChatController.js"></script>
 
 
     <script src="modules/auth/js/services/postData.js"></script>
     <script src="modules/auth/js/services/loginOrigin.js"></script>
     <script src="modules/auth/js/services/checkUsernameAvailability.js"></script>
-    <script src="js/services/friendListServices.js"></script>
+    <script src="modules/friendList/js/services/friendListServices.js"></script>
 
+    <script src="js/services/socketFactory.js"></script>
+    <script src="js/values/chatValues.js"></script>
 
     <script src="modules/auth/js/directives/RegisterFormDirectives.js"></script>
-    <script src="js/directives/friendFinder.js"></script>
+    <script src="modules/friendList/js/directives/friendFinder.js"></script>
 
 
   </head>
