w trakcie chat, socket.io, template chat

--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,11 @@
     <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
     <!-- angular-socket-io -->
-    <script src="lib/angular-socket-io/socket.js"></script>
-    <script src="lib/angular-socket-io/mock/socket-io.js"></script>
+    <script src="lib/angular-socket-io/socket.io-1.4.5.js"></script>
+
+    <!-- random stuff -->
+
+    <script src="lib/angular-elastic/elastic.js"></script>
 
 
 
@@ -45,7 +48,7 @@
     <script src="modules/friendList/js/services/friendListServices.js"></script>
 
     <script src="js/services/socketFactory.js"></script>
-    <script src="js/values/chatValues.js"></script>
+
 
     <script src="modules/auth/js/directives/RegisterFormDirectives.js"></script>
     <script src="modules/friendList/js/directives/friendFinder.js"></script>
