przed zmiana w state'ach

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="modules/auth/css/loginFormStyle.css" rel="stylesheet">
     <link href="modules/friendList/css/friendStyle.css" rel="stylesheet">
-    <link href="css/chatStyle.css" rel="stylesheet">
+    <link href="modules/globalChat/css/chatStyle.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -41,12 +41,12 @@
     <script src="modules/auth/js/controllers/RegisterController.js"></script>
     <script src="modules/friendList/js/controllers/FriendController.js"></script>
     <script src="js/controllers/HomeController.js"></script>
-    <script src="js/controllers/ChatController.js"></script>
+    <script src="js/controllers/PrivateChatController.js"></script>
+    <script src="modules/globalChat/js/controllers/ChatController.js"></script>
 
 
     <script src="modules/auth/js/services/postData.js"></script>
     <script src="modules/auth/js/services/loginOrigin.js"></script>
-    <script src="modules/auth/js/services/checkUsernameAvailability.js"></script>
     <script src="modules/friendList/js/services/friendListServices.js"></script>
 
 
