zmiana w chacie na http request o log zamiast socket

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,7 @@
     <script src="modules/auth/js/services/postData.js"></script>
     <script src="modules/auth/js/services/loginOrigin.js"></script>
     <script src="modules/friendList/js/services/friendListServices.js"></script>
+    <script src="modules/globalChat/js/services/chatServices.js"></script>
 
 
     <script src="modules/auth/js/directives/RegisterFormDirectives.js"></script>
