--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,7 @@
     <script src="modules/auth/js/services/loginOrigin.js"></script>
     <script src="modules/friendList/js/services/friendListServices.js"></script>
     <script src="modules/globalChat/js/services/chatServices.js"></script>
+    <script src="js/services/prvChatServices.js"></script>
 
 
     <script src="modules/auth/js/directives/RegisterFormDirectives.js"></script>
