na etapie losowania pierwszych pytan

--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,9 @@
     <script src="modules/auth/js/controllers/HomeController.js"></script>
     <script src="modules/privateChat/js/controllers/PrivateChatController.js"></script>
     <script src="modules/globalChat/js/controllers/ChatController.js"></script>
-    <Script src="js/QuizController.js"></Script>
+    <Script src="js/QuizQueController.js"></Script>
+    <Script src="js/QuizGameController.js"></Script>
+
 
 
     <script src="modules/auth/js/services/postData.js"></script>
