tiding up, quiz further logic, quiz archive and continuus quizing

--- a/www/index.html
+++ b/www/index.html
@@ -48,8 +48,8 @@
     <script src="modules/auth/js/controllers/HomeController.js"></script>
     <script src="modules/privateChat/js/controllers/PrivateChatController.js"></script>
     <script src="modules/globalChat/js/controllers/ChatController.js"></script>
-    <Script src="js/QuizQueController.js"></Script>
-    <Script src="js/QuizGameController.js"></Script>
+    <script src="js/QuizQueController.js"></script>
+    <script src="js/QuizGameController.js"></script>
 
 
 
