refactors, spinner switch to css

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
 
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/spinners.css" rel="stylesheet">
     <link href="modules/auth/css/loginFormStyle.css" rel="stylesheet">
     <link href="modules/friendList/css/friendStyle.css" rel="stylesheet">
     <link href="modules/globalChat/css/chatStyle.css" rel="stylesheet">
