--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@
 
     <script src="modules/auth/js/directives/RegisterFormDirectives.js"></script>
     <script src="modules/friendList/js/directives/friendFinder.js"></script>
+    <script src="js/directives/quizQueDirective.js"></script>
 
 
   </head>
