further refactoring, gulp conf changes

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     <link href="modules/auth/css/loginFormStyle.css" rel="stylesheet">
     <link href="modules/friendList/css/friendStyle.css" rel="stylesheet">
     <link href="modules/globalChat/css/chatStyle.css" rel="stylesheet">
-    <link href="css/quiz.css" rel="stylesheet">
+    <link href="../scss/quiz.scss">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -65,6 +65,7 @@
     <script src="modules/auth/js/directives/RegisterFormDirectives.js"></script>
     <script src="modules/friendList/js/directives/friendFinder.js"></script>
     <script src="js/directives/quizQueDirective.js"></script>
+    <script src="js/directives/quizGameDirective.js"></script>
 
 
   </head>
